<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:motion="http://schemas.android.com/tools">


    <data>
        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.ui.representative.RepresentativeViewModel" />
        <variable
            name="address"
            type="com.example.android.politicalpreparedness.data.source.remote.network.models.Address" />
    </data>


    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/fragment_representative_scene">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/representative_search_form"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <TextView
                android:id="@+id/search_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:text="@string/representative_search_title"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/headline_6"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/address_line_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:autofillHints=""
            android:inputType="textPostalAddress"
            android:hint="@string/address_line_1_hint"
            android:text="@={viewModel.address.line1}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_title" />


        <EditText
            android:id="@+id/address_line_2"
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_height="0dp"
            android:autofillHints=""
            android:hint="@string/address_line_2_hint"
            android:text="@={viewModel.address.line2}"
            android:inputType="textPostalAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_line_1" />


        <EditText
            android:id="@+id/city"
            android:layout_width="0dp"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/city_hint"
            android:text="@={viewModel.address.city}"
            android:inputType="textPostalAddress"
            app:layout_constraintEnd_toStartOf="@id/state"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_line_2" />


        <Spinner
            android:id="@+id/state"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:autofillHints=""
            android:layout_marginEnd="@dimen/margin_small"
            android:entries="@array/states"
            app:stateValue="@{viewModel.address.state}"
            android:inputType="textPostalAddress"
            app:layout_constraintBottom_toBottomOf="@id/city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/city"
            app:layout_constraintTop_toTopOf="@id/city"/>


        <EditText
            android:id="@+id/zip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:autofillHints=""
            android:inputType="number"
            android:maxLength="5"
            android:hint="@string/zip_hint"
            android:text="@={viewModel.address.zip}"
            app:layout_constraintEnd_toEndOf="@id/city"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/city" />


        <Button
            android:id="@+id/find_myRep_search_button"
            android:layout_width="0dp"
            android:layout_margin="@dimen/margin_small"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            android:text="@string/find_my_representatives"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/zip"/>

        <Button
            android:id="@+id/use_location_search_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:padding="@dimen/default_padding"
            android:text="@string/use_my_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/find_myRep_search_button" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/representative_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:text="@string/my_representatives_title"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/headline_6"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/representative_search_form" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/representatives_recyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/representative_title"/>


        <TextView
            android:id="@+id/list_placeholder"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/search_for_your_representatives"
            android:textAlignment="center"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/representative_title"
            motion:visibilityMode="ignore" />

        <ProgressBar
            android:id="@+id/representative_progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/representative_title"/>

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>